# rtoe-ue

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  runner.py
.github/workflows/: build-and-push-ecr.yml  lint.yml
dagster/: dagster.yaml
src/rtoe_ue/: definitions.py  precommit_check_asset_code_versions.py
src/rtoe_ue/defs/assets/: _utils.py  gp_history_collection.py  gp_history_load_rds.py  satcat_collection.py  satcat_load_rds.py  space_weather_collection.py  space_weather_load_rds.py
src/rtoe_ue/defs/hello_world/: hello_world.py
src/rtoe_ue/defs/partitions/: dates.py
src/rtoe_ue/defs/resources/: celestrak.py  manifests.py  postgres.py  s3.py  spacetrack.py
src/rtoe_ue/defs/run_configs/: collection_job.yaml
