[project]
name = "rtoe-ue"
version = "0.1.0"
description = ""
authors = [
    {name = "kschluns",email = "kschluns@bu.edu"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "boto3 (>=1.42.15,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "fastparquet (>=2025.12.0,<2026.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
