[tool.poetry]
name = "rtoe-ue"
version = "0.1.0"
description = ""
authors = ["kschluns <kschluns@bu.edu>"]
readme = "README.md"
packages = [{ include = "rtoe_ue" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
boto3 = "^1.42.15"
pandas = "^2.3.3"
pyarrow = "^22.0.0"
fastparquet = "^2025.12.0"
requests = "^2.32.5"
dagster = "^1.12.8"
dagster-webserver = "^1.12.8"
dagster-dg-cli = "^1.12.8"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
pre-commit = "^4.5.1"

[tool.black]
line-length = 88
target-version = ["py311"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
