[project]
name = "rtoe_ue"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.8",
    "boto3 (>=1.42.19,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "fastparquet (>=2025.12.0,<2026.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "dagster-postgres (>=0.28.8,<0.29.0)",
    "dagster-aws (>=0.28.8,<0.29.0)",
    "dagster-webserver (>=1.12.8,<2.0.0)",
    "dagster-dg-cli (>=1.12.8,<2.0.0)",
]

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=25.12.0,<26.0.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "rtoe_ue"
registry_modules = [
    "rtoe_ue.components.*",
]


[tool.black]
line-length = 88
target-version = ["py311"]
